read files as bytes